# goofmail

./: .gitignore  CMakeLists.txt  README.md  gbodyreader.cpp  gbodyreader.h  gcredential.h  gcredentialsreader.h  gcsvreader.cpp  gcsvreader.h  gdatareader.h  gheaderreader.cpp  gheaderreader.h  gmailcurl.cpp  gmailcurl.h  gperson.h  gprovider.h  gproxy.h  greplacer.h  gutil.cpp  gutil.h  main.cpp
tests/: CMakeLists.txt  mail.cpp  provider.cpp  readers.cpp  tests.cpp
